<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ThirdFragment">


    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.dontstopthemusic.dontstopthemusic.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first"/>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.dontstopthemusic.dontstopthemusic.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second"/>
    <fragment
        android:id="@+id/FourthFragment"
        android:name="com.dontstopthemusic.dontstopthemusic.SecondFragment"
        android:label="@string/fourth_fragment_label"
        tools:layout="@layout/fragment_fourth"/>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.dontstopthemusic.dontstopthemusic.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">
        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_ThirdFragment_to_FourthFragment"
            app:destination="@id/FourthFragment" />
    </fragment>
    <fragment
        android:id="@+id/HelpFragment"
        android:name="com.dontstopthemusic.dontstopthemusic.HelpFragment"
        android:label="@string/Help_button"
        tools:layout="@layout/fragment_help" />
    <!--ID has to be same as item id-->
</navigation>