<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/stereo" />

        <FrameLayout
            android:id="@+id/fl_chart_stereo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="12dp">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_stereo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

            </com.github.mikephil.charting.charts.LineChart>
        </FrameLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/monitor" />

        <FrameLayout
            android:id="@+id/fl_chart_monitor"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="12dp">

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_monitor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />
        </FrameLayout>

        <Button
            android:id="@+id/button_debug_silence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Debug_silence" />

        <Button
            android:id="@+id/button_debug_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Debug_feedback" />

        <Button
            android:id="@+id/button_debug_hiss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Debug_hiss" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>